implementacion de pipe basics/numbers/uncommon

--- a/src/app/products/pages/uncommon-page/uncommon-page.component.html
+++ b/src/app/products/pages/uncommon-page/uncommon-page.component.html
@@ -1,1 +1,104 @@
-<p>uncommon-page works!</p>
+<!-- aqui con fieldset de primeng -->
+
+<p-panel header="Pipes no tan comunes" class="p-1">
+  <p>
+    Pipes incluídos en Angular - Usualmente en el Common Module
+  </p>
+</p-panel>
+
+<div class="grid mt-2">
+
+   <div class="col-12 md:col-6">
+    <p-fieldset legend="i18Select pipe" [toggleable]="true">
+      <p>saludos {{name}} es un placer {{gender|i18nSelect:invitationMap}}
+      </p>
+      <p-button 
+      (onClick)="changeClient()" 
+      label="Cambiar Persona"></p-button>
+
+    </p-fieldset>
+  </div>
+
+   <div class="col-12 md:col-6">
+    <p-fieldset legend="i18Plural pipe" [toggleable]="true">
+      <p>
+        Actualmente  {{clients.length|i18nPlural:clientsMap}} 
+        </p>
+      <p-button
+      (onClick)="deleteClient()"
+      label="borrar cliente"
+      >
+
+      </p-button>
+
+    </p-fieldset>
+  </div>
+
+   <div class="col-12 md:col-6">
+    <p-fieldset legend="Slice pipe" [toggleable]="true">
+
+      <b>Original</b>
+      <pre>{{clients}}</pre>
+
+      <b>slice:1</b>
+      <pre>{{clients|slice:1}}</pre>
+      <b>slice:2</b>
+      <pre>{{clients|slice:2}}</pre>
+
+      <b>slice:0:2</b>
+      <pre>{{clients|slice:0:2}}</pre>
+      
+      <b>slice:1:2</b>
+      <pre>{{clients|slice:1:2}}</pre>
+
+      <b>slice:2:2</b>
+      <pre>{{clients|slice:2:2}}</pre>
+
+      <b>slice:0:3</b>
+      <pre>{{clients|slice:0:3}}</pre>
+      <b>slice:0:-3</b>
+      <pre>{{clients|slice:0:-3}}</pre>
+
+
+
+    </p-fieldset>
+  </div>
+
+   <div class="col-12 md:col-6">
+    <p-fieldset legend="Json pipe" [toggleable]="true">
+
+     <pre>{{person|json}}</pre> 
+
+    </p-fieldset>
+  </div>
+
+   <div class="col-12 md:col-6">
+    <p-fieldset legend="KeyValue pipe" [toggleable]="true">
+      <ul>
+
+        <li *ngFor="let item of person|keyvalue">
+         <b> {{item.key|titlecase}}</b> : <b>{{item.value}}</b>
+
+      
+      </li>
+      </ul>
+
+
+
+
+    </p-fieldset>
+  </div>
+   <div class="col-12 md:col-6">
+    <p-fieldset legend="Async pipe" [toggleable]="true">
+      <pre *ngIf="!(myObservableTimer|async)">resolviendo observable</pre>
+
+      <pre>{{promiseValue|async}}</pre>
+      <pre *ngIf="!(promiseValue|async)">resolviendo promesa</pre>
+      <pre>{{promiseValue|async}}</pre>
+
+
+    </p-fieldset>
+  </div>
+
+
+  </div>
