--- a/src/app/shared/components/menu/menu.component.html
+++ b/src/app/shared/components/menu/menu.component.html
@@ -1,15 +1,3 @@
-<div class="card flex justify-content-center">
-    
 <p-menubar [model]="menuItems">
-
-   <ng-template pTemplate="start">
-        <img src="./favicon.ico" height="40" class="mr-2" />
-    </ng-template>
-    <ng-template pTemplate="end">
-        <input type="text" pInputText placeholder="te la comes
-        " class="w-full" />
-    </ng-template>
+  <img src="./favicon.ico" alt="Icono">
 </p-menubar>
-  
-  <!-- <p-menu [model]="menuItems"></p-menu> -->
-</div>
