--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,6 @@
 @import "primeng/resources/themes/lara-dark-indigo/theme.css";
 @import "primeng/resources/primeng.css";
 @import "primeicons/primeicons.css";
+@import 'primeflex/primeflex.min.css';
+
+
