refresh pipe data

--- a/src/app/products/pages/basics-page/basics-page.component.html
+++ b/src/app/products/pages/basics-page/basics-page.component.html
@@ -24,7 +24,7 @@
     </p-card>
   </div>
   <div class="col-12 md:col-6">
-    <p-card header="titlecase">
+    <p-card header="date">
     <ol>
       <li>fecha</li>
       <li>fecha | date</li>
@@ -45,7 +45,7 @@
     </p-card>
   </div>
   <div class="col-12 md:col-6">
-    <p-card header="titlecase">
+    <p-card header="date">
       <ol>
       <li>{{customDate}}</li>
       <li>{{customDate | date }}</li>
